--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,61 +1,12 @@
 <div class="col-sm-8" id="main">
-
+  <div class="col">
+    <app-documents-tabs 
+      *ngFor ="let doc of openedDocuments"
+      [document]="doc"
+      (selected)="onDocumentSelected(doc)"></app-documents-tabs>
+  </div>
   <div>
-    <button class="btn btn-primary" (click)="openCity('London')">London
-                            <span onclick="this.parentElement.style.display='none'">&times;</span>
-                        </button>
-    <button class="btn btn-primary" (click)="openCity('Paris')">Paris
-                            <span onclick="this.parentElement.style.display='none'">&times;</span>
-                        </button>
-    <button class="btn btn-primary" (click)="openCity('Tokyo')">Tokyo
-                            <span onclick="cerrarDocumento(this,'Tokyo')">&times;</span>
-                        </button>
-  </div>
-
-  <div id="London" class="city document">
-    <h2>London</h2>
-    <p>London is the capital city of England.</p>
-    <p>Lorem ipsum dolor sit amet, sed eu case consetetur. Quis debitis mentitum quo et, veniam nonumy per no. Sed ei fabulas
-      assueverit, ne quas utamur usu, eum dico choro cu. Vim et dolores signiferumque. Stet expetendis elaboraret pri cu,
-      at justo expetenda assentior his. Nonumy percipit definitiones ad cum. Esse volumus antiopam nec ex, saepe animal inimicus
-      no eos, tale definiebas eos in. An qui equidem mediocrem efficiantur, dicant euripidis cum at, senserit concludaturque
-      id eum. Eos purto eruditi an. Sed legimus blandit pericula in, in purto ornatus sea.
-    </p>
-    <p>Lorem ipsum dolor sit amet, sed eu case consetetur. Quis debitis mentitum quo et, veniam nonumy per no. Sed ei fabulas
-      assueverit, ne quas utamur usu, eum dico choro cu. Vim et dolores signiferumque. Stet expetendis elaboraret pri cu,
-      at justo expetenda assentior his. Nonumy percipit definitiones ad cum. Esse volumus antiopam nec ex, saepe animal inimicus
-      no eos, tale definiebas eos in. An qui equidem mediocrem efficiantur, dicant euripidis cum at, senserit concludaturque
-      id eum. Eos purto eruditi an. Sed legimus blandit pericula in, in purto ornatus sea.
-    </p>
-    <p>Lorem ipsum dolor sit amet, sed eu case consetetur. Quis debitis mentitum quo et, veniam nonumy per no. Sed ei fabulas
-      assueverit, ne quas utamur usu, eum dico choro cu. Vim et dolores signiferumque. Stet expetendis elaboraret pri cu,
-      at justo expetenda assentior his. Nonumy percipit definitiones ad cum. Esse volumus antiopam nec ex, saepe animal inimicus
-      no eos, tale definiebas eos in. An qui equidem mediocrem efficiantur, dicant euripidis cum at, senserit concludaturque
-      id eum. Eos purto eruditi an. Sed legimus blandit pericula in, in purto ornatus sea.
-    </p>
-
-  </div>
-
-  <div id="Paris" style="display:none" class="city document">
-    <h2>Paris</h2>
-    <p>Paris is the capital of France.</p>
-    <p>Lorem ipsum dolor sit amet, sed eu case consetetur. Quis debitis mentitum quo et, veniam nonumy per no. Sed ei fabulas
-      assueverit, ne quas utamur usu, eum dico choro cu. Vim et dolores signiferumque. Stet expetendis elaboraret pri cu,
-      at justo expetenda assentior his. Nonumy percipit definitiones ad cum. Esse volumus antiopam nec ex, saepe animal inimicus
-      no eos, tale definiebas eos in. An qui equidem mediocrem efficiantur, dicant euripidis cum at, senserit concludaturque
-      id eum. Eos purto eruditi an. Sed legimus blandit pericula in, in purto ornatus sea.
-    </p>
-  </div>
-
-  <div id="Tokyo" style="display:none" class="city document">
-    <h2>Tokyo</h2>
-    <p>Tokyo is the capital of Japan.</p>
-    <p>Lorem ipsum dolor sit amet, sed eu case consetetur. Quis debitis mentitum quo et, veniam nonumy per no. Sed ei fabulas
-      assueverit, ne quas utamur usu, eum dico choro cu. Vim et dolores signiferumque. Stet expetendis elaboraret pri cu,
-      at justo expetenda assentior his. Nonumy percipit definitiones ad cum. Esse volumus antiopam nec ex, saepe animal inimicus
-      no eos, tale definiebas eos in. An qui equidem mediocrem efficiantur, dicant euripidis cum at, senserit concludaturque
-      id eum. Eos purto eruditi an. Sed legimus blandit pericula in, in purto ornatus sea.
-    </p>
+    <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
   </div>
 
 </div>
