--- a/src/app/side-bar/code-list/code-list.component.html
+++ b/src/app/side-bar/code-list/code-list.component.html
@@ -1,18 +1,10 @@
 <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
+    <div class="panel-heading" role="tab" id="headingTwo">
         <h4 class="panel-title">
-            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Documentos
+            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Collapsible Group Item #2
                               </a>
         </h4>
     </div>
-    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-        <div class="panel-body">
-            <ul>
-                <li><a href="#">Documento 1</a></li>
-                <li><a href="#">Documento 2</a></li>
-                <li><a href="#">Documento 3</a></li>
-            </ul>
-        </div>
-    </div>
+
 </div>
