Sharing document ingo

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="col-sm-2 sidenav" id="mysidenav">
 
   <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-    <app-document-list [documents]="documents"></app-document-list>
+    <app-document-list></app-document-list>
     <app-code-list></app-code-list>   
   </div>
 
