--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
 <app-header></app-header>
 <div class="container-fluid">
   <div class="row content">
-    <app-side-bar [documents]="documents"></app-side-bar>
-    <app-content [openedDocuments]="documents"></app-content>
+    <app-side-bar></app-side-bar>
+    <app-content></app-content>
   </div>
 </div>
 <app-footer></app-footer>
