--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,12 +1,3 @@
-<div class="col-sm-8" id="main">
-  <div class="col">
-    <app-documents-tabs 
-      *ngFor ="let doc of openedDocuments"
-      [document]="doc"
-      (selected)="onDocumentSelected(doc)"></app-documents-tabs>
-  </div>
-  <div>
-    <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
-  </div>
-
+<div>
+  <app-documents></app-documents>
 </div>
