login form, includes login with google

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
+
+app-root {
+  display: block;
+  height: 100%;
+}
+
+.custom {
+  background-color: #e0e8e1;
+}
