--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,6 @@
 
 <app-header></app-header>
 <div class="container-fluid">
-  <div class="row content">
-    <app-side-bar></app-side-bar>
-    <app-content></app-content>
-  </div>
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
