--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="container-fluid text-center">
+<footer class="container-fluid text-center" *ngIf="authsvc.isAuthenticated()">
     <p>Footer Text</p>
 </footer>
