--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" *ngIf="authsvc.isAuthenticated()">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -19,6 +19,8 @@
             <li><a href="#">Separated link</a></li>
           </ul>
         </li>
+      </ul>
+      <ul class="nav navbar-nav" *ngIf="router.url === '/workspace'">
         <li><a href="#">Documentos</a></li>
         <li><a href="#">Códigos</a></li>
         <li>
@@ -32,7 +34,8 @@
         <li><a href="#">Visualización</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#" (click)="login()"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a routerLink='/myProjects' *ngIf="authsvc.isAuthenticated()" > Mis Proyectos </a></li>
+        <li><a href="#" (click)="logout()" *ngIf="authsvc.isAuthenticated()" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
