authenticate in api and header visualization

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse" *ngIf="authsvc.isAuthenticated()">
+<nav class="navbar navbar-inverse" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -34,8 +34,8 @@
         <li><a href="#">Visualización</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a routerLink='/myProjects' *ngIf="authsvc.isAuthenticated()" > Mis Proyectos </a></li>
-        <li><a href="#" (click)="logout()" *ngIf="authsvc.isAuthenticated()" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li><a routerLink='/myProjects' *ngIf="this.authsvc.isAuthenticated()" > Mis Proyectos </a></li>
+        <li><a href="#" (click)="logout()" *ngIf="show" ><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
       </ul>
     </div>
   </div>
