--- a/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
+++ b/src/app/work-space/side-bar/document-list/document-item/document-item.component.html
@@ -1,1 +1,1 @@
-<li><a href="#" (click)="onOpenDocument()">{{document.name}}</a></li>
+<li><span style="cursor: pointer" (click)="onOpenDocument()">{{document.name}}</span></li>
