--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="container-fluid text-center" *ngIf="authsvc.isAuthenticated()">
+<footer class="container-fluid text-center" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
     <p>Footer Text</p>
 </footer>
