--- a/src/app/header/code-modal/code-modal.component.html
+++ b/src/app/header/code-modal/code-modal.component.html
@@ -1,3 +1,31 @@
-<p>
-  code-modal works!
-</p>
+<div class="container-fluid code-modal-container">
+    <div class="row code-modal-header">
+        <button type="button" (click)="onClose()" class="close col-xs-1">&times;</button>
+        <div class="col-xs-6 col-md-4">
+            <h4>Editar código</h4>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="input-group">
+            <span class="input-group-addon">Código     </span>
+            <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.name">
+            </div>
+            <div class="input-group">
+            <span class="input-group-addon">Descripción</span>
+            <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.memo">
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <button type="button" class="btn btn-success" (click)="onSaveCode()">
+            Guardar
+            </button>
+            <button *ngIf="code._id !== '0'" type="button" class="btn btn-danger" (click)="onDeleteCode()">
+            Borrar
+            </button>
+        </div>    
+    </div> 
+</div>
