--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,12 @@
           </ul>
         </li>
         <li><a href="#">Documentos</a></li>
-        <li><a href="#">Códigos</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Códigos<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+              <li><a (click)="onNewCode()">Nuevo código</a></li>
+          </ul>
+        </li>
         <li>
           <a href="#" data-toggle="modal" data-target="#exampleModal" data-whatever="Citas">Citas</a>
         </li>
