--- a/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.html
+++ b/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.html
@@ -1,3 +1,5 @@
-<button class="btn btn-primary" (click)="onSelectDocument()">{{document.name}}
-  <span (click)="this.parentElement.style.display='none'">&times;</span>
-</button>
+<div *ngIf="doc!=null">
+    <button class="btn btn-primary" >{{doc.name}}
+      <span (click)="this.parentElement.style.display='none'">&times;</span>
+    </button>
+</div>
