--- a/src/app/work-space/side-bar/code-list/code-list.component.html
+++ b/src/app/work-space/side-bar/code-list/code-list.component.html
@@ -1,9 +1,10 @@
+<span defaultOverlayTarget></span>
 <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
         <h4 class="panel-title">
             <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                Códigos
-                              </a>
+                    Códigos
+            </a>
         </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
