quotes service. comment code

--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -7,6 +7,9 @@
     *ngFor="let line of lines; let i = index"
     [text]="line.text"
     [quotes]="line.relatedQuotes"
+    [predecessorQuotes]="line.predecessorQuotes"
+    [borderTopQuotes]="line.borderTopQuotes"
+    [borderBottomQuotes]="line.borderBottomQuotes"
     [id]="i"
     ></app-line>
     <app-options [optionGroups]="menuOptions"></app-options>
