--- a/src/app/shared/helpers/options/options.component.html
+++ b/src/app/shared/helpers/options/options.component.html
@@ -4,7 +4,7 @@
       contextMenuItem let-item 
       [visible]="option.visible" 
       [enabled]="option.enabled"
-      (execute)="option.onClick()">
+      (execute)="option.onClick(optionsMenu.item)">
       {{option.name}}
     </ng-template>
     <ng-template contextMenuItem divider="true"></ng-template>
