refactor of services

--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -1,18 +1,6 @@
 <div class="container content-container">
-  <div class="row">
-    <div class="col text-area" 
-      (contextmenu)="onContextMenu($event, actualDocument?.text)"
-    >    
-    <app-line
-    *ngFor="let line of lines; let i = index"
-    [text]="line.text"
-    [quotes]="line.relatedQuotes"
-    [predecessorQuotes]="line.predecessorQuotes"
-    [borderTopQuotes]="line.borderTopQuotes"
-    [borderBottomQuotes]="line.borderBottomQuotes"
-    [id]="i"
-    ></app-line>
-    <app-options [optionGroups]="menuOptions"></app-options>
-  </div>  
-  </div>
+  <app-page *ngFor="let page of pages; let i = index"
+    [id]="page.getId()"
+  >
+  </app-page>
 </div>
