--- a/src/app/my-projects/projects/project-item-col/project-item-col.component.html
+++ b/src/app/my-projects/projects/project-item-col/project-item-col.component.html
@@ -1,10 +1,8 @@
-<li class="list-group-item">
-    <div class="col-md-11">
-        <h4>{{project.name}}</h4>
-        {{project.description}}
-    </div>
-    <div class="col-md-1">
-        <button class="btn btn-primary btn-access" type="button" (click)="onAccessProject()">Acceder</button>
-        <button class="btn btn-info btn-uncol" type="button"> Quitar </button>
-    </div>
-</li>
+<td>
+    <button class="btn btn-primary btn-access" (click)="onAccessProject()">Acceder</button>
+    <button class="btn btn-danger btn-delete" (click)="onDeleteProject()">x</button>
+</td>
+<td> {{project.name}}</td>
+<td>
+    {{project.description}}
+</td>
