--- a/src/app/my-projects/projects/project-item/project-item.component.html
+++ b/src/app/my-projects/projects/project-item/project-item.component.html
@@ -1,10 +1,8 @@
-<li class="list-group-item">
-    <div class="col-md-11">
-        <h4>{{project.name.split('/')[1]}}</h4>
-        <inline-editor type="text" [(ngModel)]="project.description" (onSave)="onUpdateDescription($event)" size=100></inline-editor>
-    </div>
-    <div class="col-md-1">
-        <button class="btn btn-primary btn-access" type="button" (click)="onAccessProject()">Acceder</button>
-        <button class="btn btn-danger btn-delete" type="button" (click)="onDeleteProject()">Eliminar</button>
-    </div>
-</li>
+<td>
+    <button class="btn btn-primary btn-access" (click)="onAccessProject()">Acceder</button>
+    <button class="btn btn-danger btn-delete" (click)="onDeleteProject()">x</button>
+</td>
+<td> {{project.name.split('/')[1]}}</td>
+<td>
+    <inline-editor type="text" [(ngModel)]="project.description" (onSave)="onUpdateDescription($event)" size=50></inline-editor>
+</td>
