--- a/src/app/my-projects/projects/projects.component.css
+++ b/src/app/my-projects/projects/projects.component.css
@@ -25,6 +25,7 @@
     font-weight: 300;
     font-size: 20px;
     border-radius: 2px;
+    width: -webkit-fill-available;
 }
 
 input {
@@ -32,14 +33,24 @@ input {
     font-size: 14px;
 }
 
-.scrollableList {
-    overflow: scroll;
-    height: 500px;
-}
-
 h2 {
     text-align: center;
     font-weight: 300;
     font-size: 40px;
     color: dimgray;
+}
+
+h3 {
+    text-align: center;
+    font-weight: 300;
+    color: #4A4D49;
+}
+
+.smallinput {
+    height: 30px;
+    font-size: 14px;
+    font-weight: 400;
+    border-width: 0px 0px 2px 0px;
+    box-shadow: none;
+    border-radius: inherit;
 }
