--- a/src/app/my-projects/projects/projects.component.html
+++ b/src/app/my-projects/projects/projects.component.html
@@ -1,5 +1,5 @@
-<div class="col-md-9">
-    <h2> Mis proyectos </h2>
+<div class="col-md-11">
+    <h2> Proyectos </h2>
     <br>
     <div class="row">
         <div class="col-md-4">
@@ -19,13 +19,151 @@
         <span> {{errorMessage }} </span>
     </div>
     <hr>
-    <h4> Mis proyectos </h4>
-    <ul class="list-group scrollableList">
-        <app-project-item *ngFor="let proj of projects" [project]="proj"></app-project-item>
-    </ul>
 
-    <h4> Proyectos en los que colaboro </h4>
-    <ul class="list-group scrollableList">
-        <app-project-item-col *ngFor="let proj of projects" [project]="proj"></app-project-item-col>
-    </ul>
+    <!-- TABLA DE MIS PROYECTOS -->
+    <div class="container-fluid">
+        <div class="col-md-12">
+
+            <div class="row">
+                <h2 class="col-xs-6">Mis proyectos</h2>
+                <div class="col-xs-2">
+                    <label class="label-control">Mostrar</label>
+                    <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+                        <option [ngValue]="5">5</option>
+                        <option [ngValue]="10">10</option>
+                        <option [ngValue]="15">15</option>
+                    </select>
+                </div>
+                <div class="col-xs-4">
+                    <div class="row">
+                        <label class="col-xs-12 label-control">Ordenar por</label>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortBy">
+                                <option ngValue="name">Nombre</option>
+                                <option ngValue="description">Descripcion</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                                        <option ngValue="asc">Ascendente</option>
+                                        <option ngValue="desc">Descendente</option>
+                                    </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+
+                <table class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                    <thead>
+                        <tr>
+                            <th colspan="2">
+                                Filtro por nombre:
+                                <input class="form-control smallinput" [(ngModel)]="filterQuery" />
+                            </th>
+                        </tr>
+                        <tr>
+                            <th style="width: 10%"></th>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="name" style="font-weight:400">Nombre</mfDefaultSorter>
+                            </th>
+                            <th style="width: 40%">
+                                <mfDefaultSorter by="description" style="font-weight:400">Descripcion</mfDefaultSorter>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let proj of mf.data">
+                            <app-project-item [project]="proj"></app-project-item>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5">
+                                <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <!-- TABLA DE PROYECTOS en los que colaboro -->
+    <!-- <div class="container-fluid">
+        <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+
+            <div class="row">
+                <h3 class="col-xs-6">Proyectos en los que colaboro</h3>
+                <div class="col-xs-2">
+                    <label class="label-control">Mostrar</label>
+                    <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+                                <option [ngValue]="5">5</option>
+                                <option [ngValue]="10">10</option>
+                                <option [ngValue]="15">15</option>
+                            </select>
+                </div>
+                <div class="col-xs-4">
+                    <div class="row">
+                        <label class="col-xs-12 label-control">Ordenar por</label>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortBy">
+                                        <option ngValue="name">Nombre</option>
+                                        <option ngValue="description">Descripcion</option>
+                                    </select>
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                                                <option ngValue="asc">Ascendente</option>
+                                                <option ngValue="desc">Descendente</option>
+                                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel panel-default">
+
+                <table class="table table-striped" [mfData]="projects | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+                    <thead>
+                        <tr>
+                            <th style="width: 10%"></th>
+                            <th style="width: 20%">
+                                <mfDefaultSorter by="name">Nombre</mfDefaultSorter>
+                            </th>
+                            <th style="width: 40%">
+                                <mfDefaultSorter by="description">Descripcion</mfDefaultSorter>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th colspan="5">
+                                Filtro por nombre:
+                                <input class="form-control" [(ngModel)]="filterQuery" />
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let proj of mf.data">
+                            <app-project-item-col [project]="proj"></app-project-item-col>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="5">
+                                <mfBootstrapPaginator [rowsOnPageSet]="[5,10,15]"></mfBootstrapPaginator>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+    </div> -->
+
 </div>
