--- a/src/app/work-space/content/documents/document-content/page/line/line.component.html
+++ b/src/app/work-space/content/documents/document-content/page/line/line.component.html
@@ -1,6 +1,6 @@
 <div>
-{{text}}<div 
-*ngFor="let quote of quotes"
-[ngClass]="getQuoteType(quote)"
-></div><br>
+  <div *ngFor="let quote of quotes" [ngClass]="getQuoteType(quote)"></div>
+  <div>
+    {{line.text}}<br>
+  </div>
 </div>
