--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,2 @@
-<footer class="container-fluid text-center" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
-    <p>Footer Text</p>
+<footer class="container-fluid text-center footer" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
 </footer>
