--- a/src/app/work-space/content/documents/document-content/page/page.component.html
+++ b/src/app/work-space/content/documents/document-content/page/page.component.html
@@ -1,16 +1,6 @@
-<div class="row">
-  <div class="col text-area"
-    (contextmenu)="onContextMenu($event, actualDocument?.text)"
-  >
-  <app-line
-  *ngFor="let line of lines; let i = index"
-  [text]="line.text"
-  [quotes]="line.relatedQuotes"
-  [predecessorQuotes]="line.predecessorQuotes"
-  [borderTopQuotes]="line.borderTopQuotes"
-  [borderBottomQuotes]="line.borderBottomQuotes"
-  [id]="i"
-  ></app-line>
-  <app-options [optionGroups]="menuOptions"></app-options>
-</div>
+<div class="page-container">
+    <div class="col text-area">
+      <app-line *ngFor="let line of lines" [line]="line"></app-line>
+
+    </div>
 </div>
