--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -1,6 +1,9 @@
 <div class="container content-container" (contextmenu)="onContextMenu($event, actualDocument?.text)">
-  <app-page *ngFor="let page of pages"
-    [page] ="page"  >
+    <div *ngFor="let page of pages" style="display: table-cell">
+        <div *ngFor="let line of page.getLines()">
+        </div>
+      </div>
+  <app-page *ngFor="let page of pages" [page]="page">
   </app-page>
   <app-options [optionGroups]="menuOptions"></app-options>
 </div>
