--- a/src/app/work-space/content/documents/document-content/page/line/line.component.html
+++ b/src/app/work-space/content/documents/document-content/page/line/line.component.html
@@ -1,6 +1,9 @@
-<div>
-  <div *ngFor="let quote of quotes" [ngClass]="getQuoteType(quote)"></div>
-  <div>
+<!-- <div>
+    <div *ngFor="let quote of quotes" [ngClass]="getQuoteType(quote)"></div>
+  <div class="text-div">
     {{line.text}}<br>
   </div>
-</div>
+</div> -->
+<div class="text-div">
+    {{line.text}}<br>
+  </div>
