--- a/src/app/work-space/content/documents/document-content/page/page.component.css
+++ b/src/app/work-space/content/documents/document-content/page/page.component.css
@@ -15,6 +15,6 @@
 
   cursor: text;
   background-color: rgb(255, 255, 255);
-  height: 100%;
-  display: block;
+  display: table-cell;
+  height: auto;
 }
