--- a/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.html
+++ b/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.html
@@ -1,4 +1,4 @@
 
-    <button class="btn btn-primary" *ngIf="doc!=null" >{{doc.name}}
+    <button class="btn btn-primary" *ngIf="doc!=null" (click)="onSelectDocument()">{{doc.name}}
       <span (click)="this.parentElement.style.display='none'">&times;</span>
     </button>
