--- a/src/app/work-space/content/documents/document-content/page/line/line.component.css
+++ b/src/app/work-space/content/documents/document-content/page/line/line.component.css
@@ -1,13 +1,20 @@
-.quote {
-  color: red;
-  
-  width: 5px;
+.text-div {
+  padding-left: 10px;
   display: table-cell;
   height: auto;
+}
+
+.quote {
+  color: red;
+  width: 5px;
   font-weight: bold;
   padding: none;
   margin: none;
   border-left: 2px solid red;
+  padding-left: 10px;
+
+  display: table-cell;
+  height: auto;
 }
 
 .borderTop-quote {
@@ -18,8 +25,16 @@
   border-bottom: 2px solid red;
 }
 
-.text-div {
-  padding-left: 10px;
-  display: table-cell;
-  height: auto;
+.page-container {
+  border: 0;
+  box-shadow: 0 0 0 0.75pt #d1d1d1, 0 0 3pt 0.75pt #ccc;
+  /* margin-left: 10%;
+  margin-right: 10%; */
+  margin-bottom: 0.22cm;
+  margin-top: 0.22cm;
+
+  cursor: text;
+  background-color: rgb(255, 255, 255);
+  display: table;
+  height: auto; 
 }
