--- a/src/app/work-space/content/documents/document-content/page/page.component.css
+++ b/src/app/work-space/content/documents/document-content/page/page.component.css
@@ -7,9 +7,9 @@
 
 .page-container {
   border: 0;
-  box-shadow: 0 0 0 0.75pt #d1d1d1, 0 0 3pt 0.75pt #ccc;
-  margin-left: 10%;
-  margin-right: 10%;
+  /* box-shadow: 0 0 0 0.75pt #d1d1d1, 0 0 3pt 0.75pt #ccc; */
+  /* margin-left: 10%;
+  margin-right: 10%; */
   margin-bottom: 0.22cm;
   margin-top: 0.22cm;
 
