multi page quotes

--- a/src/app/work-space/content/documents/document-content/bracket/bracket.component.html
+++ b/src/app/work-space/content/documents/document-content/bracket/bracket.component.html
@@ -1,2 +1,2 @@
-<div *ngFor="let quote of columns" [ngClass]="getQuoteType(quote)">
-</div>
+<td *ngFor="let quote of columns" [ngClass]="getQuoteType(quote)">
+</td>
