--- a/src/app/work-space/content/documents/document-content/document-content.component.css
+++ b/src/app/work-space/content/documents/document-content/document-content.component.css
@@ -1,15 +1,71 @@
 
   .content-container {
-    background-color: rgb(255, 255, 255);
+    background-color: aliceblue;
     overflow-y: scroll;
-    height: 842px;
-    display: table;
+    height: 30cm;
+    width: 31cm;
   }
 
   .bracket-cont {
     padding-left: 5px;
   }
 
+
+  .quote-empty {
+    color: transparent;
+  }
+
+  .quote {
+    color: red;
+    width: 5px;
+    font-weight: bold;
+    padding: none;
+    margin: none;
+    border-left: 2px solid red;
+    padding-left: 10px;
+  }
+
+  .borderTop-quote {
+    border-top: 2px solid red;
+    
+  }
+
+  .borderBottom-quote {
+    border-bottom: 2px solid red;
+  }
+
+  .text-area {
+    padding-left: 15px;
+    padding-right:15px;
+    background-color: white;
+  }
+
+  .page {
+    margin-top: 2%;
+    border-spacing: 0 10px;
+  }
+
+  .page-container {
+    padding-bottom: 5px;
+    padding-top: 5px;
+    padding-left: 5%;
+    padding-right: 5%;
+
+  }
+
+  .top-line {
+    box-shadow:  0 9px 0px 0px white, -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+    padding-top: 15px;
+  }
+
+  .bottom-line {
+    box-shadow:  9px 0px 0px white, 0 -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+    padding-bottom: 15px;
+  }
+
+  .white-line {
+    box-shadow:  0 9px 0px 0px white, 0 -9px 0px 0px white, 1px 0 10px -2px #d1d1d1, 1px 0 10px -2px #d1d1d1;
+  }
 
 
 
