--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -1,27 +1,22 @@
-<!-- <div class="container content-container" (contextmenu)="onContextMenu($event, actualDocument?.text)">
-  <!-- <div *ngFor="let page of pages" style="display: table-cell">
-    <div *ngFor="let line of page.getLines()" class="bracket-cont">
-      <app-bracket
-        [quotes]="line.getRelatedQuotes()"
-      ></app-bracket>
-    </div>
-  </div> -->
-  <!-- <app-page *ngFor="let page of pages" [page]="page"></app-page>
-  <app-options [optionGroups]="menuOptions"></app-options>
-</div> -->
-
 <div class="content-container">
-<table style="width:100%" >
-  <tr  *ngFor="let page of pages">
-    <td class="page-container">
-      <table class="page" >
-        <tr *ngFor="let line of page.getLines()">
-          <td *ngFor="let quote of allQuotes" [ngClass]="line?.getBracketType(quote)"></td>
-          <td [ngClass]="line? line.getLineType(): 'white-line'">{{line?.text}}<br></td>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
+  <table style="width:100%">
+    <tr *ngFor="let page of pages; let p=index">
+      <td class="page-container">
+        <table class="page" [id]="p">
+          <tbody [id]="p">
+          <tr *ngFor="let line of page.getLines(); let l = index" [id]="l">
+            <td *ngFor="let quote of allQuotes; let i = index" 
+            [ngClass]="line?.getBracketType(colRange-i-1)" 
+            [ngStyle]="{ 'color': line?.getBracketColor(colRange-i-1) }"
+            >
+            </td>
+            <td 
+            [ngClass]="line? line.getLineType(): 'white-line'">{{line?.text}}<br>
+            </td>
+          </tr>
+        </tbody>
+        </table>
+      </td>
+    </tr>
+  </table>
 </div>
-
