--- a/src/app/work-space/content/documents/documents.component.html
+++ b/src/app/work-space/content/documents/documents.component.html
@@ -1,11 +1,12 @@
 <div class="col-sm-8" id="main">
   <div class="col">
-    <app-documents-tabs 
-    *ngFor="let doc of this.openedDocuments"
-    [doc]="doc"
-    (selected)="onDocumentSelected(doc)"></app-documents-tabs>
+    <app-documents-tabs *ngFor="let doc of this.openedDocuments" 
+    [doc]="doc" 
+    (selected)="onDocumentSelected(doc)"
+    ></app-documents-tabs>
   </div>
-  <div>
+  <div (contextmenu)="onContextMenu($event)">
     <app-document-content [actualDocument]="this.selectedDocument"></app-document-content>
+    <app-options [optionGroups]="menuOptions"></app-options>
   </div>
 </div>
