--- a/src/app/my-projects/projects/project-item/project-item.component.css
+++ b/src/app/my-projects/projects/project-item/project-item.component.css
@@ -8,7 +8,8 @@
 }
 
 .btn-access,
-.btn-delete {
+.btn-delete,
+.btn-edit {
     border: none;
     color: white;
     font-weight: 300;
@@ -24,6 +25,12 @@
 
 .btn-access {
     background-color: #669ADA;
+}
+
+.btn-edit {
+    background-color: transparent;
+    color: grey;
+    float: right;
 }
 
 .col-md-1 {
