--- a/src/app/work-space/side-bar/side-bar.component.css
+++ b/src/app/work-space/side-bar/side-bar.component.css
@@ -1,21 +1,9 @@
-@media screen and (max-height: 1148px) {
-  .sidenav {
-    padding: 2px;
-    padding-top: 20px;
-    background-color: #333534;
-    height: 879px;
-    width: 20%;
-  }
-}
-
-@media screen and (max-height: 840px) {
 .sidenav {
     padding: 2px;
     padding-top: 20px;
     background-color: #333534;
-    height: 830px;
+    height: fit-content;
     width: 20%;
-  }
 }
 
 #miniside {
@@ -37,9 +25,9 @@
 }
 
 .opened {
-    display: none;
+    display: block;
 }
 
 .closed {
-    display: block;
+    display: none;
 }
