--- a/src/app/work-space/side-bar/side-bar.component.html
+++ b/src/app/work-space/side-bar/side-bar.component.html
@@ -7,6 +7,6 @@
 
 <div class="col-sm-1 sidenav" id='miniside'>
     <button id="sidenavCollapseBtn" (click)="isOpened = !isOpened">
-      <span [ngClass]="isOpened ? 'glyphicon glyphicon-chevron-right' : 'glyphicon glyphicon-chevron-left'" aria-hidden="true"></span>
+      <span [ngClass]="isOpened ? 'glyphicon glyphicon-chevron-left' : 'glyphicon glyphicon-chevron-right'" aria-hidden="true"></span>
     </button>
 </div>
