import plain, rtf, pdf, docx files

--- a/src/app/work-space/content/documents/document-content/document-content.component.css
+++ b/src/app/work-space/content/documents/document-content/document-content.component.css
@@ -10,6 +10,7 @@
   .page {
     margin-top: 2%;
     border-spacing: 0 10px;
+    width: 20cm;
   }
 
   .page-container {
@@ -41,6 +42,7 @@
     padding-left: 15px;
     padding-right:15px;
     background-color: white;
+    font-size: 15.5px;
   }
 
   
