--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -21,11 +21,16 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav" *ngIf="router.url.includes('workspace')">
-                <li><a href="#">Documentos</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Códigos<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Documentos<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a (click)="onNewCode()">Nuevo código</a></li>
+                        <li><input type="file" #files name="files[]" multiple style="display:none;" (change)="onChange($event)"/><a class="header-btn" (click)="files.click()">Importar</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a  href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Códigos<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="header-btn" (click)="onNewCode()">Nuevo código</a></li>
                     </ul>
                 </li>
                 <li>
