--- a/src/app/my-projects/projects/projects.component.css
+++ b/src/app/my-projects/projects/projects.component.css
@@ -25,7 +25,7 @@
     font-weight: 300;
     font-size: 20px;
     border-radius: 2px;
-    width: -webkit-fill-available;
+    width: -webkit-stretch;
 }
 
 input {
