--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,12 @@
-html {
-  height: 100%;
-}
-body {
-  min-height: 100%;
+html,body {
+  height:100%;
+  padding:0;
+  margin:0;
 }
 
 app-root {
   display: block;
-  height: 100%;
+  height: 100vh;
 }
 
 .custom {
