set multiple codes to quote

--- a/src/app/header/code-modal/code-modal.component.html
+++ b/src/app/header/code-modal/code-modal.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid code-modal-container">
-    <div class="row code-modal-header">
+<div class="container-fluid fingqda-modal-container">
+    <div class="row fingqda-modal-header">
         <button type="button" (click)="onClose()" class="close col-xs-1">&times;</button>
         <div class="col-xs-6 col-md-4">
             <h4>Editar código</h4>
@@ -9,11 +9,11 @@
         <div class="col-xs-12">
             <div class="input-group">
             <span class="input-group-addon">Código     </span>
-            <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.name">
+            <input class="col-xs-12 form-control" type="text" [(ngModel)]="name">
             </div>
             <div class="input-group">
             <span class="input-group-addon">Descripción</span>
-            <input class="col-xs-12 form-control" type="text" [(ngModel)]="code.memo">
+            <input class="col-xs-12 form-control" type="text" [(ngModel)]="memo">
             </div>
         </div>
     </div>
