--- a/src/app/work-space/content/documents/document-content/document-content.component.html
+++ b/src/app/work-space/content/documents/document-content/document-content.component.html
@@ -5,12 +5,13 @@
         <table class="page" [id]="p">
           <tbody [id]="p">
           <tr *ngFor="let line of page.getLines(); let l = index" [id]="l">
-            <td *ngFor="let quote of allQuotes; let i = index" 
+            <td *ngFor="let quote of actualDocumentContent.getQuotesDisplay(); let i = index" 
             [ngClass]="line?.getBracketType(colRange-i-1)" 
             [ngStyle]="{ 'color': line?.getBracketColor(colRange-i-1) }"
+            (click)="onOpenQuoteModal(line?.getRelatedQuote(colRange-i-1)?.quote)" 
             >
             </td>
-            <td 
+            <td (contextmenu)="onContextMenu($event)"
             [ngClass]="line? line.getLineType(): 'white-line'">{{line?.text}}<br>
             </td>
           </tr>
@@ -19,4 +20,5 @@
       </td>
     </tr>
   </table>
+  <app-options [optionGroups]="menuOptions"></app-options>
 </div>
