project shema and changes in api

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
 
 <app-header></app-header>
 <div class="container-fluid">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
