--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
+<nav class="navbar navbar-default" *ngIf="(router.url !== '/') && (router.url !== '/signup')">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -13,7 +13,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Proyecto <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
+                        <li><a (click)="onShareProject()">Compartir</a></li>
                         <li><a href="#">Another action</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
