--- a/src/app/my-projects/projects/project-item/project-item.component.css
+++ b/src/app/my-projects/projects/project-item/project-item.component.css
@@ -13,8 +13,8 @@
     border: none;
     color: white;
     font-weight: 300;
-    border-radius: 1px;
-    margin: 2px;
+    /* border-radius: 1px; */
+    /* margin: 2px; */
     /* float: right; */
     align-self: center;
 }
