--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,16 @@
 html {
-  height: 100%;
+    height: 100%;
 }
+
 body {
-  min-height: 100%;
+    min-height: 100%;
 }
 
 app-root {
-  display: block;
-  height: 100%;
+    display: block;
+    height: 100%;
 }
 
 .custom {
-  background-color: #e0e8e1;
+    background-color: #F0F0F0;
 }
